--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
+        "@inertiajs/inertia": "^0.11.1",
         "flowbite": "^2.3.0"
     }
 }
